changed some text

--- a/climate_change.ipynb
+++ b/climate_change.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "climate_change.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNjyi02QT1hPqdtOSpvmZT4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +27,29 @@
       "cell_type": "code",
       "metadata": {
         "id": "MOAplziY4_u6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dgEc60tgC_Ht",
+        "colab_type": "text"
+      },
+      "source": [
+        "this is a text change"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nkhLmoV8DBma",
         "colab_type": "code",
         "colab": {}
       },
