--- a/climate_change.ipynb
+++ b/climate_change.ipynb
@@ -25,6 +25,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yjneyQwAO5YE",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Imports"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T93XoqBuO-QD",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importing the modules"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "MOAplziY4_u6",
@@ -34,10 +54,22 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
+        "\n",
+        "# Tokenizing text\n",
         "import nltk"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "63MiExKMO0zG",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importing the data"
+      ]
     },
     {
       "cell_type": "code",
@@ -47,7 +79,7 @@
         "colab": {}
       },
       "source": [
-        "kaggle = pd.read_csv('train.csv')"
+        "kaggle = pd.read_csv(\"https://raw.githubusercontent.com/monicafar147/classification-predict-streamlit-template/master/climate-change-belief-analysis/test.csv\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -57,16 +89,16 @@
       "metadata": {
         "id": "Xks8B7g2Ie3A",
         "colab_type": "code",
+        "outputId": "ef2f3efc-0604-48ef-8357-de1428176df5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 343
-        },
-        "outputId": "a1b5ac95-02ce-4349-f5c3-bf623f77d6ac"
+          "height": 335
+        }
       },
       "source": [
         "kaggle.head(10)"
       ],
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -90,7 +122,6 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>sentiment</th>\n",
               "      <th>message</th>\n",
               "      <th>tweetid</th>\n",
               "    </tr>\n",
@@ -98,86 +129,76 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>PolySciMajor EPA chief doesn't think carbon di...</td>\n",
-              "      <td>625221</td>\n",
+              "      <td>Europe will now be looking to China to make su...</td>\n",
+              "      <td>169760</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>It's not like we lack evidence of anthropogeni...</td>\n",
-              "      <td>126103</td>\n",
+              "      <td>Combine this with the polling of staffers re c...</td>\n",
+              "      <td>35326</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>RT @RawStory: Researchers say we have three ye...</td>\n",
-              "      <td>698562</td>\n",
+              "      <td>The scary, unimpeachable evidence that climate...</td>\n",
+              "      <td>224985</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>1</td>\n",
-              "      <td>#TodayinMaker# WIRED : 2016 was a pivotal year...</td>\n",
-              "      <td>573736</td>\n",
+              "      <td>@Karoli @morgfair @OsborneInk @dailykos \\nPuti...</td>\n",
+              "      <td>476263</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>1</td>\n",
-              "      <td>RT @SoyNovioDeTodas: It's 2016, and a racist, ...</td>\n",
-              "      <td>466954</td>\n",
+              "      <td>RT @FakeWillMoore: 'Female orgasms cause globa...</td>\n",
+              "      <td>872928</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>1</td>\n",
-              "      <td>Worth a read whether you do or don't believe i...</td>\n",
-              "      <td>425577</td>\n",
+              "      <td>RT @nycjim: Trump muzzles employees of several...</td>\n",
+              "      <td>75639</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>1</td>\n",
-              "      <td>RT @thenation: Mike Pence doesn’t believe in g...</td>\n",
-              "      <td>294933</td>\n",
+              "      <td>@bmastenbrook yes wrote that in 3rd yr Comp Sc...</td>\n",
+              "      <td>211536</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>1</td>\n",
-              "      <td>RT @makeandmendlife: Six big things we can ALL...</td>\n",
-              "      <td>992717</td>\n",
+              "      <td>RT @climatehawk1: Indonesian farmers weather #...</td>\n",
+              "      <td>569434</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>1</td>\n",
-              "      <td>@AceofSpadesHQ My 8yo nephew is inconsolable. ...</td>\n",
-              "      <td>664510</td>\n",
+              "      <td>RT @guardian: British scientists face a ‘huge ...</td>\n",
+              "      <td>315368</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>1</td>\n",
-              "      <td>RT @paigetweedy: no offense… but like… how do ...</td>\n",
-              "      <td>260471</td>\n",
+              "      <td>Aid For Agriculture | Sustainable agriculture ...</td>\n",
+              "      <td>591733</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   sentiment                                            message  tweetid\n",
-              "0          1  PolySciMajor EPA chief doesn't think carbon di...   625221\n",
-              "1          1  It's not like we lack evidence of anthropogeni...   126103\n",
-              "2          2  RT @RawStory: Researchers say we have three ye...   698562\n",
-              "3          1  #TodayinMaker# WIRED : 2016 was a pivotal year...   573736\n",
-              "4          1  RT @SoyNovioDeTodas: It's 2016, and a racist, ...   466954\n",
-              "5          1  Worth a read whether you do or don't believe i...   425577\n",
-              "6          1  RT @thenation: Mike Pence doesn’t believe in g...   294933\n",
-              "7          1  RT @makeandmendlife: Six big things we can ALL...   992717\n",
-              "8          1  @AceofSpadesHQ My 8yo nephew is inconsolable. ...   664510\n",
-              "9          1  RT @paigetweedy: no offense… but like… how do ...   260471"
+              "                                             message  tweetid\n",
+              "0  Europe will now be looking to China to make su...   169760\n",
+              "1  Combine this with the polling of staffers re c...    35326\n",
+              "2  The scary, unimpeachable evidence that climate...   224985\n",
+              "3  @Karoli @morgfair @OsborneInk @dailykos \\nPuti...   476263\n",
+              "4  RT @FakeWillMoore: 'Female orgasms cause globa...   872928\n",
+              "5  RT @nycjim: Trump muzzles employees of several...    75639\n",
+              "6  @bmastenbrook yes wrote that in 3rd yr Comp Sc...   211536\n",
+              "7  RT @climatehawk1: Indonesian farmers weather #...   569434\n",
+              "8  RT @guardian: British scientists face a ‘huge ...   315368\n",
+              "9  Aid For Agriculture | Sustainable agriculture ...   591733"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 3
         }
       ]
     },
@@ -197,11 +218,11 @@
       "metadata": {
         "id": "j3p7AMawF6cm",
         "colab_type": "code",
+        "outputId": "c4397d66-cc7d-4715-8377-c2defa6872bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 924
-        },
-        "outputId": "c4397d66-cc7d-4715-8377-c2defa6872bd"
+        }
       },
       "source": [
         "df = kaggle.copy()\n",
@@ -219,7 +240,7 @@
         "    print('\\n')\n",
         "    index += 1"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,11 +326,11 @@
       "metadata": {
         "id": "vPmxvnvqF6fl",
         "colab_type": "code",
+        "outputId": "abb24b0d-8c90-46b5-c1e2-fa7c40653a73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 541
-        },
-        "outputId": "abb24b0d-8c90-46b5-c1e2-fa7c40653a73"
+        }
       },
       "source": [
         "df = kaggle.copy()\n",
@@ -322,7 +343,7 @@
         "    print('\\n')\n",
         "    index += 1"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,16 +429,16 @@
       "metadata": {
         "id": "c2qgfJn6F6qJ",
         "colab_type": "code",
+        "outputId": "16810089-1be3-49f9-cd8c-a432e3b23bda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 218
-        },
-        "outputId": "16810089-1be3-49f9-cd8c-a432e3b23bda"
+        }
       },
       "source": [
         "kaggle['message']"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
