changed import data set to train.csv

--- a/climate_change.ipynb
+++ b/climate_change.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/monicafar147/classification-predict-streamlit-template/blob/Template/climate_change.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/monicafar147/classification-predict-streamlit-template/blob/development/climate_change.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -79,7 +79,7 @@
         "colab": {}
       },
       "source": [
-        "kaggle = pd.read_csv(\"https://raw.githubusercontent.com/monicafar147/classification-predict-streamlit-template/master/climate-change-belief-analysis/test.csv\")"
+        "kaggle = pd.read_csv(\"https://raw.githubusercontent.com/monicafar147/classification-predict-streamlit-template/master/climate-change-belief-analysis/train.csv\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "Xks8B7g2Ie3A",
         "colab_type": "code",
-        "outputId": "ef2f3efc-0604-48ef-8357-de1428176df5",
+        "outputId": "0b1d851d-235f-483a-97a4-545cb97a2b2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 335
@@ -122,6 +122,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>sentiment</th>\n",
               "      <th>message</th>\n",
               "      <th>tweetid</th>\n",
               "    </tr>\n",
@@ -129,70 +130,80 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Europe will now be looking to China to make su...</td>\n",
-              "      <td>169760</td>\n",
+              "      <td>1</td>\n",
+              "      <td>PolySciMajor EPA chief doesn't think carbon di...</td>\n",
+              "      <td>625221</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Combine this with the polling of staffers re c...</td>\n",
-              "      <td>35326</td>\n",
+              "      <td>1</td>\n",
+              "      <td>It's not like we lack evidence of anthropogeni...</td>\n",
+              "      <td>126103</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>The scary, unimpeachable evidence that climate...</td>\n",
-              "      <td>224985</td>\n",
+              "      <td>2</td>\n",
+              "      <td>RT @RawStory: Researchers say we have three ye...</td>\n",
+              "      <td>698562</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>@Karoli @morgfair @OsborneInk @dailykos \\nPuti...</td>\n",
-              "      <td>476263</td>\n",
+              "      <td>1</td>\n",
+              "      <td>#TodayinMaker# WIRED : 2016 was a pivotal year...</td>\n",
+              "      <td>573736</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>RT @FakeWillMoore: 'Female orgasms cause globa...</td>\n",
-              "      <td>872928</td>\n",
+              "      <td>1</td>\n",
+              "      <td>RT @SoyNovioDeTodas: It's 2016, and a racist, ...</td>\n",
+              "      <td>466954</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>RT @nycjim: Trump muzzles employees of several...</td>\n",
-              "      <td>75639</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Worth a read whether you do or don't believe i...</td>\n",
+              "      <td>425577</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>@bmastenbrook yes wrote that in 3rd yr Comp Sc...</td>\n",
-              "      <td>211536</td>\n",
+              "      <td>1</td>\n",
+              "      <td>RT @thenation: Mike Pence doesn’t believe in g...</td>\n",
+              "      <td>294933</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>RT @climatehawk1: Indonesian farmers weather #...</td>\n",
-              "      <td>569434</td>\n",
+              "      <td>1</td>\n",
+              "      <td>RT @makeandmendlife: Six big things we can ALL...</td>\n",
+              "      <td>992717</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>RT @guardian: British scientists face a ‘huge ...</td>\n",
-              "      <td>315368</td>\n",
+              "      <td>1</td>\n",
+              "      <td>@AceofSpadesHQ My 8yo nephew is inconsolable. ...</td>\n",
+              "      <td>664510</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>Aid For Agriculture | Sustainable agriculture ...</td>\n",
-              "      <td>591733</td>\n",
+              "      <td>1</td>\n",
+              "      <td>RT @paigetweedy: no offense… but like… how do ...</td>\n",
+              "      <td>260471</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                             message  tweetid\n",
-              "0  Europe will now be looking to China to make su...   169760\n",
-              "1  Combine this with the polling of staffers re c...    35326\n",
-              "2  The scary, unimpeachable evidence that climate...   224985\n",
-              "3  @Karoli @morgfair @OsborneInk @dailykos \\nPuti...   476263\n",
-              "4  RT @FakeWillMoore: 'Female orgasms cause globa...   872928\n",
-              "5  RT @nycjim: Trump muzzles employees of several...    75639\n",
-              "6  @bmastenbrook yes wrote that in 3rd yr Comp Sc...   211536\n",
-              "7  RT @climatehawk1: Indonesian farmers weather #...   569434\n",
-              "8  RT @guardian: British scientists face a ‘huge ...   315368\n",
-              "9  Aid For Agriculture | Sustainable agriculture ...   591733"
+              "   sentiment                                            message  tweetid\n",
+              "0          1  PolySciMajor EPA chief doesn't think carbon di...   625221\n",
+              "1          1  It's not like we lack evidence of anthropogeni...   126103\n",
+              "2          2  RT @RawStory: Researchers say we have three ye...   698562\n",
+              "3          1  #TodayinMaker# WIRED : 2016 was a pivotal year...   573736\n",
+              "4          1  RT @SoyNovioDeTodas: It's 2016, and a racist, ...   466954\n",
+              "5          1  Worth a read whether you do or don't believe i...   425577\n",
+              "6          1  RT @thenation: Mike Pence doesn’t believe in g...   294933\n",
+              "7          1  RT @makeandmendlife: Six big things we can ALL...   992717\n",
+              "8          1  @AceofSpadesHQ My 8yo nephew is inconsolable. ...   664510\n",
+              "9          1  RT @paigetweedy: no offense… but like… how do ...   260471"
             ]
           },
           "metadata": {
